# wagtail-pdf-converter

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  tasks.py  tox.ini  zensical.toml
.github/: pull_request_template.md
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  nightly-tests.yml  publish.yml
docs/: configuration.md  getting-started.md  index.md
docs/guides/: accessing-content.md  admin-ui.md  customising-templates.md  index.md  management-commands.md
src/wagtail_pdf_converter/: __init__.py  admin_views.py  apps.py  conf.py  constants.py  enums.py  forms.py  markdown_extensions.py  models.py  prompts.py  signals.py  tasks.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
src/wagtail_pdf_converter/management/commands/: cleanup_stuck_conversions.py  convert_documents.py  update_document_conversion_status.py
src/wagtail_pdf_converter/migrations/: 0001_add_documentconversion.py
src/wagtail_pdf_converter/services/: __init__.py  base.py  converter.py  image_processing.py
src/wagtail_pdf_converter/services/backends/: __init__.py  base.py  gemini.py
src/wagtail_pdf_converter/templates/wagtail_pdf_converter/: base.html  document.html
src/wagtail_pdf_converter/templates/wagtail_pdf_converter/admin/: conversion_metrics.html  conversion_status_cell.html  edit_converted_content.html
src/wagtail_pdf_converter/templatetags/: pdf_markdown_tags.py
tests/: conftest.py  manage.py  test_admin_views.py  test_backends.py  test_base.py  test_conf.py  test_converter.py  test_document_integration.py  test_forms.py  test_image_processing.py  test_link_fixing.py  test_management_commands.py  test_markdown_extensions.py  test_models.py  test_tasks.py  test_templatetags.py  test_utils.py  test_version_utils.py  test_views.py  test_wagtail_hooks.py
tests/testproject/: settings.py  urls.py
tests/testproject/testapp/: apps.py  models.py
tests/testproject/testapp/migrations/: 0001_initial.py  0002_add_documentconversion.py
